# Hardhack-solver

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.base  Dockerfile.koyeb  README.md  agent.md  control.sh  merkle_prove.sh  mine.sh  mine_parallel.sh  mine_ttnn.sh  miner.sh  miner_agent.py  miner_fast.py  miner_hybrid.py  miner_local_gen.py  miner_local_seedfile.py  miner_openblas.py  miner_parallel_fetch.py  miner_ttnn.py  prove.sh  seed_template.json  specs.md  tens_docs.md  test_chunked_matmul.py  test_ttnn_int32.py  test_ttnn_int8.py  test_valid_math.py  testnet_agent.sh  updates.md
include/: compute.h  kernel.h  merkle.h  miner.h
libs/blake3/c/: CMakeLists.txt
src/: compute_cpu.cpp  compute_tt.cpp  main.cpp  merkle.cpp  merkle_prover_main.cpp  miner.cpp  prover_main.cpp
src/kernels/: compute_matmul.cpp  reader_matmul.cpp  writer_matmul.cpp
